CODETOOLS-7903051: Fix minor typo in FAQ